# FAIT

./: .gitignore  CMakeLists.txt  README.md  a.out  example.cpp  fait.cpp  freeze_module.cpp  freeze_module.h  loop_analysis.cpp  loop_analysis.h  nnc_example.cpp  nnc_example_dyn_shape.cpp  parallelize_loops.cpp  parallelize_loops.h  prof.py  run_net_torch.py  run_net_trt.cpp  run_torch.py  run_torch_prof.py  run_torchtrt.cpp  run_trt.cpp  run_ts.cpp  run_utils.h  run_utils.py  script.py  simple_loop_nnc.cpp  util.cpp  util.h
cmake/utils/: Util.cmake
example/: batched_nms.py  decode_bboxes.json  decode_bboxes.py  loop_assign.py  loop_vector_add.py  normalize.py  simple_loop.py  simple_simple_loop.py  simple_vector.py  solov2_mask.py  ssd_bbox.py  yolact_mask.py  yolov3_anchor.py  yolov3_bbox.py
fuser/: codegen.h  custom_lowering_func.cpp  graph_builder.cpp  graph_builder.h  lowering_utils.h  nnc_func.h  shape_func.cpp  solve_update.cpp  solve_update.h  te_utils.h  tssa_nnc_func.cpp  tssa_nnc_func.h  tssa_set_ops.cpp
models/: rtmdet_bbox.py  rtmdet_net.py
passes/: canonicalize.cpp  common_passes.h  cp_tssa.cpp  cse_tssa.cpp  dce_tssa.cpp  freeze_module.cpp  fuse_ops.cpp  fuse_ops.h  licm.cpp  parallelize_loops.cpp  parallelize_loops.h  refine_types.cpp  refine_types.h  te_fused_op.cpp  te_fused_op.h  te_op.cpp  te_op.h  tensor_ssa.cpp  tensor_ssa.h  tensor_type_funcs.cpp  type_utils.h  unroll_loops.cpp  validate_graph.cpp
tensorexpr/: collect_interm_buf.h  collect_interm_bufs.cpp  cuda_codegen_tssa.cpp  cuda_codegen_tssa.h  elim_common_subexpr.cpp  evaluate_dim.cpp  evaluate_dim.h  evaluate_output_shape.cpp  evaluate_output_shape.h  extract_common_cond.cpp  functor_parallization.cpp  functor_parallization.h  ir_utils.cpp  ir_utils.h  tuple_expr.h
testing/: lowering_tests.json  test_lowering.cpp
util/: common.h  disjoint_set.h  ir.cpp  ir.h  op_traits.cpp  op_traits.h  profile.cpp  profile.h  traits.cpp  traits.h  types.h
